updated main font

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   <meta name="description" content="Trevor King, bassoonist" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
   <link rel="manifest" href="./manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+
   <title>Trevor King</title>
   <base href="/">
 </head>
